# wizelit

./: .dockerignore  .env.template  .gitignore  .removed_mcp_servers.json  Dockerfile  LICENSE  MANUAL_DEPLOYMENT_GUIDE.md  Makefile  README.md  agent.py  app_config.py  chainlit.md  check_build.sh  database.py  deploy_platform.sh  diff_utils.py  docker-compose.yml  env.template  exceptions.py  graph.py  llm.py  main.py  open_search_client.py  package-lock.json  pyproject.toml  pyrightconfig.json  res.py  solution-1.mmd  solution-2.mmd  tools.py  workflows.json
.chainlit/: config.toml
.files/0204da97-045d-4ec6-b838-ccbcbebae82a/: 26c6e4a9-26f1-4385-b6e5-32a90c005bd9.json
.files/60270d2d-6de1-4780-b686-2443c2863c0e/: f4c70aa0-3323-4de0-baea-d7c2030a4a61.json
.files/6f72ecea-d13b-4d3e-9259-0ad699df4161/: a95b537a-9a15-48ff-b807-0a3dbd80bc70
.files/74180e77-5a56-48b7-b5b5-8d32af7c0580/: 9a29cba5-5d1a-409f-9def-a08579a4b4c0.json
.files/817170b5-5ce4-4add-97fa-1b0518673368/: b793b815-b837-4035-b77f-2eff4b344f8d.json
.files/cf067a4e-d611-4b6b-bd46-aad2e91a740f/: 891eb8fa-2549-4e61-9e6a-4225426a1c21
agent/: __init__.py  runtime.py
cdk/: .gitignore  README.md  app.py  cdk.context.json  cdk.json  wizelit_stack.py
config/: agents.json  agents.yaml
core/: __init__.py
models/: __init__.py  element.py  feedback.py  step.py  thread.py  user.py
public/: styles.css
scripts/: aws-scale-down.sh  aws-scale-up.sh  aws-status.sh  init_streaming.py  monitor_redis.py  monitor_redis.sh
services/: __init__.py  mcp_client.py  mcp_tooling.py
utils/: __init__.py  bedrock_config.py  chat_elements.py  diff_viewer.py  mcp_storage.py  prompt_guides.py  tool_response_handler.py
(+34 files in other folders)
