[project]
name = "wizelit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncpg>=0.31.0",
    "chainlit>=2.9.3",
    "greenlet>=3.3.0",
    "sqlalchemy>=2.0.45",
    "boto3>=1.42.5",
    "chainlit>=2.9.3",
    "langchain>=1.1.3",
    "langchain-aws>=1.1.0",
]
