[project]
name = "wizelit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncpg>=0.31.0",
    "chainlit>=2.9.3",
    "greenlet>=3.3.0",
    "sqlalchemy>=2.0.45",
    "boto3>=1.42.5",
    "langchain>=1.1.3",
    "langgraph>=1.0.4",
    "langchain-aws>=1.1.0",
    "opensearch-py>=3.1.0",
    "mcp>=1.23.3",
    "PyGithub>=2.4.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "langchain-mcp-adapters>=0.2.1",
    "fastmcp>=2.14.0",
    "crewai>=1.6.1",
    "plotly>=5.24.1",
    "redis>=5.0.0"
]
