[project]
name = "wizelit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "chainlit>=2.9.3",
    "greenlet>=3.3.0",
    "langchain>=1.1.3",
    "langgraph>=1.0.4",
    "langchain-aws>=1.1.0",
    "mcp>=1.23.3",
    "python-dotenv>=1.0.1",
    "langchain-mcp-adapters>=0.2.1",
    "plotly>=5.24.1",
    "wizelit-sdk>=0.1.25",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "utils*"]
exclude = ["data*", "public*", "dzun-local*", "__pycache__*"]

